force-app/main/default/objects/SBQQ__UpgradeSource__c/fields/SBQQ__SourceProduct__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SourceProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being upgraded.</description>
        <inlineHelpText>Specify product to upgrade from.</inlineHelpText>
        <label>Source Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Available Upgrade Sources</relationshipLabel>
        <relationshipName>AvailableUpgradeSources</relationshipName>
        <type>Lookup</type>
    </CustomField>